--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
 
   bottom_navy_bar: ^5.3.2
   flutter_login: ^1.0.14
+  unicorndial: ^1.1.5
+  http:
 
 dev_dependencies:
   flutter_test:
