--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,9 +25,12 @@ dependencies:
   cupertino_icons: ^0.1.2
 
   bottom_navy_bar: ^5.3.2
-  flutter_login: ^1.0.14
   unicorndial: ^1.1.5
   http:
+  flutter_masked_text: ^0.7.0
+  intl: ^0.16.1
+  flutter_offline: ^0.3.0
+  shared_preferences: ^0.5.1+2
 
 dev_dependencies:
   flutter_test:
