--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   flutter_colorpicker: ^0.3.4
   flutter_iconpicker: ^2.1.2
   loading: ^1.0.2
+  charts_flutter: ^0.9.0
+  flutter_circular_chart: ^0.1.0
 
 dev_dependencies:
   flutter_test:
