--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   loading: ^1.0.2
   charts_flutter: ^0.9.0
   flutter_circular_chart: ^0.1.0
+  liquid_pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
